# calendar-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/calendar_sync/: __main__.py  config.py  diagnose.py  google.py  ics.py  lock.py  models.py  reconcile.py  sync.py
tests/: conftest.py  test_cli.py  test_config.py  test_diagnose.py  test_google.py  test_ics.py  test_ics_fetch.py  test_lock.py  test_models.py  test_reconcile.py  test_sync.py
tests/fixtures/: all_day_event.ics  floating_time.ics  recurring_with_cancellation.ics  single_event.ics
