[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-sync"
version = "0.1.0"
description = "One-way sync from an Outlook ICS feed to a dedicated Google Calendar"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "icalendar>=6.0",
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
calendar-sync = "calendar_sync.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
